--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "xtal-test": "0.0.51",
     "@skypack/package-check": "0.2.2",
     "@custom-elements-manifest/analyzer": "0.5.6",
-    "xtal-decor": "0.0.52"
+    "xtal-editor": "0.0.86",
+    "xtal-shell": "0.0.25",
+    "xtal-element": "0.0.452"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test/test-all.js",
     "serve": "node node_modules/xtal-test/serve.js",
     "package-check": "package-check",
     "doc": "custom-elements-manifest analyze"
