--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "types": "types.d.ts",
   "dependencies": {
     "trans-render": "0.0.427",
-    "be-observant": "0.0.42",
+    "be-observant": "0.0.43",
     "be-decorated": "0.0.33",
     "be-hive": "0.0.8"
   },
@@ -35,7 +35,8 @@
     "@custom-elements-manifest/analyzer": "0.5.6",
     "xtal-editor": "0.0.86",
     "xtal-shell": "0.0.25",
-    "xtal-element": "0.0.452"
+    "xtal-element": "0.0.452",
+    "be-definitive": "0.0.9"
   },
   "scripts": {
     "test": "node test/test-all.js",
