--- a/package.json
+++ b/package.json
@@ -24,22 +24,23 @@
   "types": "types.d.ts",
   "dependencies": {
     "trans-render": "0.0.528",
-    "be-observant": "0.0.121",
-    "be-decorated": "0.0.110",
-    "be-hive": "0.0.42"
+    "be-observant": "0.0.123",
+    "be-decorated": "0.0.111",
+    "be-hive": "0.0.43"
   },
   "devDependencies": {
-    "xtal-test": "0.0.56",
+    "@playwright/test": "1.21.1",
+    "may-it-serve": "0.0.0",
     "@skypack/package-check": "0.2.2",
     "@custom-elements-manifest/analyzer": "0.5.7",
     "xtal-editor": "0.0.160",
-    "xtal-shell": "0.0.25",
+    "xtal-shell": "0.0.27",
     "xtal-element": "0.0.491",
-    "be-definitive": "0.0.51"
+    "be-definitive": "0.0.53"
   },
   "scripts": {
-    "test": "node test/test-all.js",
-    "serve": "node node_modules/xtal-test/serve.js",
+    "serve": "node node_modules/may-it-serve",
+    "test": "playwright test",
     "package-check": "package-check",
     "doc": "custom-elements-manifest analyze"
   },
