--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
 		"watch": true
 	},
 	"files": [
-		"be-switched.ts"
+		"be-switched.ts",
+		//"playwright.config.ts",
+		//"tests/test1.spec.mts"
 	],
 	"exclude":[
 		"build",
