--- a/package.json
+++ b/package.json
@@ -23,20 +23,17 @@
   ],
   "types": "types.d.ts",
   "dependencies": {
-    "trans-render": "0.0.626",
-    "be-observant": "0.0.154",
-    "be-decorated": "0.0.180",
-    "be-hive": "0.0.74"
+    "trans-render": "0.0.628",
+    "be-observant": "0.0.155",
+    "be-decorated": "0.0.182",
+    "be-hive": "0.0.76"
   },
   "devDependencies": {
     "@playwright/test": "1.27.1",
     "may-it-serve": "0.0.3",
     "@skypack/package-check": "0.2.2",
     "@custom-elements-manifest/analyzer": "0.6.4",
-    "xtal-editor": "0.0.196",
-    "xtal-shell": "0.0.27",
-    "xtal-element": "0.0.530",
-    "be-definitive": "0.0.68"
+    "xtal-shell": "0.0.27"
   },
   "scripts": {
     "serve": "node node_modules/may-it-serve",
