--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "trans-render": "0.0.631",
     "be-observant": "0.0.156",
+    "be-intersectional": "0.0.70",
     "be-decorated": "0.0.190",
     "be-hive": "0.0.77"
   },
