--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   ],
   "types": "types.d.ts",
   "dependencies": {
-    "trans-render": "0.0.631",
-    "be-observant": "0.0.156",
-    "be-intersectional": "0.0.70",
-    "be-decorated": "0.0.190",
-    "be-hive": "0.0.77"
+    "trans-render": "0.0.665"
+    "be-observant": "0.0.163",
+    "be-intersectional": "0.0.71",
+    "be-decorated": "0.0.223",
+    "be-hive": "0.0.82"
   },
   "devDependencies": {
-    "@playwright/test": "1.27.1",
-    "may-it-serve": "0.0.3",
+    "@playwright/test": "1.30.0",
+    "may-it-serve": "0.0.4",
     "@skypack/package-check": "0.2.2",
     "@custom-elements-manifest/analyzer": "0.6.4",
     "xtal-shell": "0.0.27"
