--- a/package.json
+++ b/package.json
@@ -23,14 +23,13 @@
   ],
   "types": "types.d.ts",
   "dependencies": {
+    "be-enhanced": "0.0.20",
+    "be-hive": "0.0.95",
     "trans-render": "0.0.681",
-    "be-observant": "0.0.163",
-    "be-intersectional": "0.0.71",
-    "be-decorated": "0.0.238",
-    "be-hive": "0.0.94",
-    "be-linked": "0.0.4"
+    "xtal-element": "0.0.562"
   },
   "devDependencies": {
+    "be-linked": "0.0.6",
     "@playwright/test": "1.34.0",
     "may-it-serve": "0.0.5",
     "@skypack/package-check": "0.2.2",
