--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "be-enhanced": "0.0.51",
     "be-hive": "0.0.122",
+    "be-value-added": "0.0.7",
     "trans-render": "0.0.705",
     "xtal-element": "0.0.578"
   },
