--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "be-enhanced": "0.0.52",
     "be-hive": "0.0.123",
+    "be-linked": "0.0.48",
     "be-propagating": "0.0.25",
     "be-value-added": "0.0.7",
     "trans-render": "0.0.706",
